# bridge-spi-test

./: .gitignore  CMakeLists.txt  TODO  bridge-spi-test.pro  cspidevice.cpp  cspidevice.h  czerabridgespi.cpp  czerabridgespi.h  main.cpp  qspidevice.cpp  qspidevice.h
